--- a/.github/workflows/python-black.yaml
+++ b/.github/workflows/python-black.yaml
@@ -1,15 +1,15 @@
-name: ScriptAnalzyer
+name: pythonblack
 on: [workflow_dispatch, pull_request]
 
 jobs:
-  scriptanalyzer_job:
-  runs-on: ubuntu-latest
-  name: Runs PS ScriptAnalyzer
-  steps:
-    - name: Check out repository code
-      uses: actions/checkout@v2
-    - name: PS ScriptAnalyzer Runner
-      uses: vkoski/black-check@master
-      id: scriptanalyzer
-      with:
-        path: 'scripts/'
+  pythonblack_job:
+    runs-on: ubuntu-latest
+    name: Runs python black
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: black Runner
+        uses: vkoski/black-check@master
+        id: pythonblack
+        with:
+          path: 'scripts/'
