--- a/.github/workflows/superlinter.yaml
+++ b/.github/workflows/superlinter.yaml
@@ -55,5 +55,6 @@ jobs:
           FILTER_REGEX_INCLUDE: .*scripts/.*
           VALIDATE_ALL_CODEBASE: true
           USE_FIND_ALGORITHM: true
+          LOG_LEVEL: DEBUG
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
