--- a/.github/workflows/megalint.yaml
+++ b/.github/workflows/megalint.yaml
@@ -4,8 +4,7 @@
 name: Mega-Linter
 
 # Start lint on any push and on pull requests
-on: [push,pull_request,workflow_dispatch]
-
+on: workflow_dispatch
 
 env: # Comment env block if you do not want to apply fixes
   # Apply linter fixes configuration
